--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,7 +1,7 @@
 [tool.poetry]
-name = "donate-crypto"
-version = "0.1.0"
-description = "Crypto Donations"
+name = "nett-ef.github.io"
+version = "0.0.0"
+description = "Scripts for GitHub Pages"
 authors = ["Fedor Saveliev <nett_ef@icloud.com>"]
 license = "MIT"
 
@@ -9,7 +9,7 @@ license = "MIT"
 python = "^3.12"
 
 
-[tool.poetry.group.dev.dependencies]
+[tool.poetry.group.donate-crypto.dependencies]
 pyyaml = "^6.0.1"
 jinja2 = "^3.1.3"
 qrcode = "^7.4.2"
