--- a/donate-crypto/py/local.env
+++ b/donate-crypto/py/local.env
@@ -1,5 +1,5 @@
-CONFIG=config.yaml
-TEMPLATES_DIR=templates
-HTML_OUTPUT_DIR=..
+HTML_OUTPUT_DIR=donate-crypto
+CONFIG=donate-crypto/config.yaml
+TEMPLATES_DIR=donate-crypto/templates
 QR_DIR=qr
 ICONS_DIR=icons
